feat(api): segmentations page and add subscriber to a segmentation list
